## HEAD:

## 0.2.1:

* Adding support for read AWS creds from config file

## 0.2.0:

* Added destroy subcommand
* Batch put attributes in sets of 25

## 0.1.1:

* Read domains with more than 100 items

## 0.1.0:

* Added export subcommand
* Added import subcommand
* Added purge subcommand