@@ -7,25 +7,19 @@ require 'sdbport/cli/purge'
 module Sdbport
   class CLI
 
-    def initialize
-      @config = Config.new
-      @aws_default_creds = { :access_key => @config.access_key,
-                             :secret_key => @config.secret_key }
-    end
-
     def start
 
       cmd = ARGV.shift
 
       case cmd
       when 'destroy'
-        CLI::Destroy.new(@aws_default_creds).destroy
+        CLI::Destroy.new.destroy
       when 'export'
-        CLI::Export.new(@aws_default_creds).export
+        CLI::Export.new.export
       when 'import'
-        CLI::Import.new(@aws_default_creds).import
+        CLI::Import.new.import
       when 'purge'
-        CLI::Purge.new(@aws_default_creds).purge
+        CLI::Purge.new.purge
       when '-v'
         puts Sdbport::VERSION
       else
