@@ -2,15 +2,16 @@ module Sdbport
   class CLI
     class Destroy
 
-      def initialize(args)
-        @default_access_key = args[:access_key]
-        @default_secret_key = args[:secret_key]
+      def initialize
+        @config = Config.new
       end
 
       def destroy
         opts       = read_options
-        access_key = opts[:access_key] || @default_access_key
-        secret_key = opts[:secret_key] || @default_secret_key
+        access_key = @config.access_key opts[:account]
+        secret_key = @config.secret_key opts[:account]
+        access_key = opts[:access_key] if opts[:access_key]
+        secret_key = opts[:secret_key] if opts[:secret_key]
 
         logger = SdbportLogger.new :log_level => opts[:level]
         domain = Domain.new :name       => opts[:name],
@@ -34,10 +35,13 @@ sdbport destroy -a xxx -k yyy -r us-west-1 -n domain
 
 EOS
           opt :help, "Display Help"
+          opt :account, "Account Credentials", :type    => :string,
+                                               :default => 'default'
           opt :level, "Log Level", :type => :string, :default => 'info'
           opt :name, "Simple DB Domain Name", :type => :string
           opt :region, "AWS region", :type => :string
-          opt :access_key, "AWS Access Key ID", :type => :string
+          opt :access_key, "AWS Access Key ID", :type  => :string,
+                                                :short => 'k'
           opt :secret_key, "AWS Secret Access Key", :type => :string
         end
       end
