@@ -1,5 +1,7 @@
 ## HEAD:
 
+* Adding support for reading multiple env configs
+
 ## 0.2.1:
 
 * Adding support for read AWS creds from config file
